src/tests/ui/import-missing.vif
const missing = @import("missing.vif")

fn main() void {}

//@ args: build
//@ stderr:
// error: cannot open module `src/tests/ui/missing.vif`
//   --> src/tests/ui/import-missing.vif:1:25
//   |
//1 | const missing = @import("missing.vif")
//   |                         ^^^^^^^^^^^^^ imported here
//
